set vim as default editor

--- a/rifle.conf
+++ b/rifle.conf
@@ -87,9 +87,9 @@ ext x?html? = ${VISUAL:-$EDITOR} -- "$@"
 # Misc
 #-------------------------------------------
 # Define the "editor" for text files as first action
-mime ^text,  label editor = ${VISUAL:-$EDITOR} -- "$@"
+mime ^text,  label editor = vim -- "$@"
 mime ^text,  label pager  = $PAGER -- "$@"
-!mime ^text, label editor, ext xml|json|csv|tex|py|pl|rb|rs|js|sh|php|dart = ${VISUAL:-$EDITOR} -- "$@"
+!mime ^text, label editor, ext xml|json|csv|tex|py|pl|rb|rs|js|sh|php|dart = vim -- "$@"
 !mime ^text, label pager,  ext xml|json|csv|tex|py|pl|rb|rs|js|sh|php|dart = $PAGER -- "$@"
 
 ext 1                         = man "$1"
